# myst

./: .gitignore  docker-compose.yml
batch/: Cargo.toml  Dockerfile  recipe.json
batch/migrations/2022-11-26-205625_create_links/: down.sql  up.sql
batch/src/: api.rs  batch.rs  config.rs  db.rs  main.rs  models.rs  schema.rs  util.rs
batch/tpl/: base.html  links.html
myst-core/: Cargo.toml  diesel.toml
myst-core/src/: db.rs  lib.rs  models.rs  schema.rs  schemas.rs
myst-wasm/: Cargo.toml  Dockerfile  index.html
myst-wasm/src/: app.rs  main.rs
myst-wasm/src/data/: loaders.rs  mod.rs
web-api/: Cargo.toml
web-api/src/: main.rs  schemes.rs
web-api/src/middlewares/: diesel.rs  mod.rs
