[package]
name = "myst-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "2.0.2",features = ["postgres"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"