[package]
name = "myst-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM frontend for Myst"
readme = "README.md"
license = "MIT"

[dependencies]
myst-core = { version = "0.1.0", path = "../myst-core" }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
diesel = {version = "2.0.2",features = ["postgres"]}
log = "0.4.17"
wasm-logger = "0.2.0"